- Replaced legacy mapper with MapStruct - No longer exposing database id